--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,33 @@
 {
-	"name": "Pullus slackus",
-	"description": "Build an Extension!",
-	"version": "1.0",
-	"manifest_version": 3,
-	"background": {
-		"service_worker": "/js/background.js"
-	},
-	"options_page": "./options.html",
-	"content_scripts": [
-		{
-			"matches": [
-				"https://github.com/*/*/pull/*"
-			],
-			"css": [
-				"/css/contentScript.css"
-			],
-			"js": [
-				"/js/contentScript.js"
-			]
-		}
-	],
-	"permissions": [
-		"storage",
-		"activeTab",
-		"scripting"
-	],
-	"action": {
-		"default_popup": "./popup.html",
-		"default_icon": {
-			"16": "/images/get_started16.png",
-			"32": "/images/get_started32.png",
-			"48": "/images/get_started48.png",
-			"128": "/images/get_started128.png"
-		}
-	},
-	"icons": {
-		"16": "/images/get_started16.png",
-		"32": "/images/get_started32.png",
-		"48": "/images/get_started48.png",
-		"128": "/images/get_started128.png"
-	}
+  "name": "Pullus slackus",
+  "description": "Build an Extension!",
+  "version": "1.0",
+  "manifest_version": 3,
+  "background": {
+    "service_worker": "/js/background.js"
+  },
+  "options_page": "./options.html",
+  "content_scripts": [
+    {
+      "matches": ["https://github.com/*"],
+      "css": ["/css/contentScript.css"],
+      "js": ["/js/contentScript.js"]
+    }
+  ],
+  "permissions": ["storage", "activeTab", "scripting"],
+  "action": {
+    "default_popup": "./popup.html",
+    "default_icon": {
+      "16": "/images/get_started16.png",
+      "32": "/images/get_started32.png",
+      "48": "/images/get_started48.png",
+      "128": "/images/get_started128.png"
+    }
+  },
+  "icons": {
+    "16": "/images/get_started16.png",
+    "32": "/images/get_started32.png",
+    "48": "/images/get_started48.png",
+    "128": "/images/get_started128.png"
+  }
 }
